[gd_scene load_steps=4 format=3 uid="uid://bj4rfldpwsc23"]

[ext_resource type="Texture2D" uid="uid://ccdxbmaf7yvhs" path="res://head.png" id="1_grcin"]
[ext_resource type="Script" path="res://hangman.gd" id="1_gth7i"]
[ext_resource type="Texture2D" uid="uid://d0e8f4fsuwp3k" path="res://body.png" id="2_u0m0l"]

[node name="hangman" type="Node2D"]
script = ExtResource("1_gth7i")

[node name="head" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.2, 0.2)
texture = ExtResource("1_grcin")

[node name="torso" type="Sprite2D" parent="."]
visible = false
position = Vector2(4, 80)
scale = Vector2(0.4, 0.4)
texture = ExtResource("2_u0m0l")

[node name="leftArm" type="Sprite2D" parent="."]
visible = false
position = Vector2(-36, 68)
rotation = 0.733679
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_u0m0l")

[node name="rightArm" type="Sprite2D" parent="."]
visible = false
position = Vector2(46, 65)
rotation = -0.753413
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_u0m0l")

[node name="leftLeg" type="Sprite2D" parent="."]
visible = false
position = Vector2(-13, 180)
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_u0m0l")

[node name="rightLeg" type="Sprite2D" parent="."]
visible = false
position = Vector2(17, 181)
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_u0m0l")
